base/be/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timetable-planner-be-service
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: timetable-planner-be
